--- a/index.html
+++ b/index.html
@@ -12,28 +12,53 @@
     <canvas id="canvas"></canvas>
     <script>
       let canvas = document.getElementById("canvas");
-      canvas.width=document.documentElement.clientWidth;
-      canvas.height=document.documentElement.clientHeight;
+      canvas.width = document.documentElement.clientWidth;
+      canvas.height = document.documentElement.clientHeight;
       let ctx = canvas.getContext("2d");
-      let painting=false;
+      let painting = false;
       ctx.fillStyle = "black";
       ctx.strokeStyle = "none";
+      ctx.lineWidth = 10;
+      ctx.lineCap = "round";
+      let last;
 
-      canvas.onmousedown = function(){
-        painting=true;
+      function drawLine(x1, y1, x2, y2) {
+        ctx.beginPath();
+        ctx.moveTo(x1, y1);
+        ctx.lineTo(x2, y2);
+        ctx.stroke();
       }
 
-      canvas.onmousemove=function(e) {
-        if(painting===true){
-      ctx.beginPath();
-ctx.arc(e.clientX, e.clientY, 6, 0, 2 * Math.PI);
-ctx.stroke();
-ctx.fill();
-        }else{
-        }
-      }
-      canvas.onmouseup=function() {
-        painting=false;
+      let isTouchDevice = "ontouchstart" in document.documentElement;
+
+      if (isTouchDevice) {
+        canvas.ontouchstart = function (e) {
+          let x = e.touches[0].clientX;
+          let y = e.touches[0].clientY;
+          last = [x, y];
+        };
+        canvas.ontouchmove = function (e) {
+          let x = e.touches[0].clientX;
+          let y = e.touches[0].clientY;
+          drawLine(last[0], last[1], x, y);
+          last = [x, y];
+        };
+      } else {
+        canvas.onmousedown = function (e) {
+          painting = true;
+          last = [e.clientX, e.clientY];
+        };
+
+        canvas.onmousemove = function (e) {
+          if (painting === true) {
+            drawLine(last[0], last[1], e.clientX, e.clientY);
+            last = [e.clientX, e.clientY];
+          } else {
+          }
+        };
+        canvas.onmouseup = function () {
+          painting = false;
+        };
       }
     </script>
   </body>
